[workspace]
resolver = "2"
members = ["examples/*"]


[workspace.dependencies]
# basic dependencies
napi-ohos = { version = "1.0" }
napi-derive-ohos = { version = "1.0" }
winit = { git = "https://github.com/richerfu/winit.git", branch = "feat-ohos-webview" }
# wry = { git = "https://github.com/richerfu/wry.git", branch = "dev" }
# openharmony-ability = { git = "https://github.com/harmony-contrib/openharmony-ability.git" }
# openharmony-ability-derive = { git = "https://github.com/harmony-contrib/openharmony-ability.git" }

openharmony-ability = { path = "../../ohos-rs/openharmony-activity/crates/ability" }
openharmony-ability-derive = { path = "../../ohos-rs/openharmony-activity/crates/derive" }

# tao = { git = "https://github.com/richerfu/tao.git", branch = "dev" }
tao = {path = "../tao"}
wry = {path = "../wry"}
http = { version = "1.1" }

# build dependencies
napi-build-ohos = { version = "1.0" }

# external dependencies
dpi = "0.1"
