[workspace]
resolver = "2"
members = ["examples/*"]


[workspace.dependencies]
# basic dependencies
napi-ohos = { version = "1.1" }
napi-derive-ohos = { version = "1.1" }
winit = { git = "https://github.com/richerfu/winit.git", branch = "feat-ohos-webview" }
wry = { git = "https://github.com/richerfu/wry.git", branch = "dev" }

openharmony-ability = { version = "0.2" }
openharmony-ability-derive = { version = "0.2" }

tao = { git = "https://github.com/richerfu/tao.git", branch = "dev" }
http = { version = "1.1" }

# build dependencies
napi-build-ohos = { version = "1.1" }

# external dependencies
dpi = "0.1"


[patch.'https://github.com/harmony-contrib/openharmony-ability.git']
openharmony-ability = { version = "0.2" }
openharmony-ability-derive = { version = "0.2" }
