[package]
name    = "basic-ipc-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi-ohos = { workspace = true, default-features = false, features = [
    "napi8",
    "async",
] }
napi-derive-ohos = { workspace = true }
tao = { workspace = true }
wry = { workspace = true }
openharmony-ability = { workspace = true, features = ["webview"] }
openharmony-ability-derive = { workspace = true }

[build-dependencies]
napi-build-ohos = { workspace = true }

[profile.release]
lto = true
